Fix font sizes on iPhone 6 Plus

--- a/styles/style.styl
+++ b/styles/style.styl
@@ -7,25 +7,25 @@ body-left = nav-width + body-padding
 font-largest =
   font-size: 46px
 
-  @media(max-width: 400px)
+  @media(max-width: 420px)
     font-size: 24px
 
 font-large =
   font-size: 36px
 
-  @media(max-width: 400px)
+  @media(max-width: 420px)
     font-size: 20px
 
 font-medium =
   font-size: 20px
 
-  @media(max-width: 400px)
+  @media(max-width: 420px)
     font-size: 16px
 
 font-small =
   font-size: 16px
 
-  @media(max-width: 400px)
+  @media(max-width: 420px)
     font-size: 14px
 
 font-smallest =
